<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <TextView
        android:id="@+id/addQuizzTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextQuizzTitleTitle"
        style="@style/TextDefaultStyle"
        />
    <EditText
        android:id="@+id/titleQuizzEditText"
        android:hint="@string/editTextQuizzTitleHint"
        android:layout_width="match_parent"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:inputType="textFilter"
        android:layout_height="wrap_content"
        style="@style/EditTextDefaultStyle" />
    <TextView
        android:id="@+id/addQuizzthemeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextQuizzThemesTitle"
        style="@style/TextDefaultStyle"
        />
    <EditText
        android:id="@+id/themeQuizzEditText"
        android:hint="@string/editTextQuizzThemesHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textFilter"
        style="@style/EditTextDefaultStyle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/addQuestionButtonLabel"
            android:text="@string/textViewAddQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDefaultStyle"
            />
        <ImageButton
            android:id="@+id/addQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:background="@mipmap/ic_add_circle_black_18dp"
            />
    </LinearLayout>
    <!-- List menu -->
    <ListView
        android:id="@+id/questionListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:smoothScrollbar="true"
        android:scrollingCache="false"
        android:animationCache="false"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:fastScrollEnabled="true"
        android:persistentDrawingCache="scrolling"
        >
    </ListView>
</LinearLayout>